# INNV1250

./: .gitignore  23_ds.Rproj  README.md  pyproject.toml
reference/: 書誌情報_Rではじめるデータサイエンス.bib  書誌情報_Rで学ぶデータ・プログラミング入門.bib  書誌情報_RとStanではじめるベイズ統計モデリングによるデータ分析入門.bib  書誌情報_Rによる機械学習入門.bib  書誌情報_Rによる統計的学習入門.bib  書誌情報_Rによる計量政治学.bib  書誌情報_RユーザのためのRStudio実践入門.bib  書誌情報_Rユーザのためのtidymodels実践入門.bib  書誌情報_R言語ではじめるプログラミングとデータ分析.bib  書誌情報_p値とは何か.bib  書誌情報_「誤差」「大間違い」「ウソ」を見分ける統計学.bib  書誌情報_グラフのウソを見破る技術.bib  書誌情報_サンプルサイズの決め方.bib  書誌情報_スモールデータ解析と機械学習.bib  書誌情報_データの分析.bib  書誌情報_データサイエンスのための統計学入門.bib  書誌情報_データサイエンスの基礎.bib  書誌情報_データサイエンスの歩き方.bib  書誌情報_データサイエンス入門.bib  書誌情報_データビジュアライゼーションの基礎.bib  書誌情報_データ分析のためのデータ可視化入門.bib  書誌情報_データ分析のための数理モデル入門.bib  書誌情報_データ視覚化の人類史.bib  書誌情報_データ解析のための統計モデリング入門.bib  書誌情報_人文・社会学の統計学.bib  書誌情報_教育を読み解くデータサイエンス.bib  書誌情報_教養としてのデータサイエンス.bib  書誌情報_確率と統計.bib  書誌情報_統計の9割はウソ.bib  書誌情報_統計モデリング.bib  書誌情報_統計モデルと推測.bib  書誌情報_統計学入門.bib  書誌情報_統計学入門データ分析に必須の知識・考え方.bib  書誌情報_統計学基礎.bib  書誌情報_統計的学習の基礎.bib
week02/: 0201_r_intro.ipynb  qrcode.R
week04/: 0401_summary_statistics.ipynb  0401_summary_statistics.qmd  0402_visualization.ipynb  r_introduction2.ipynb  r_introduction2.qmd  your_turn.qmd
week05/: 0501_summary_statistics.ipynb  0502_visualization.ipynb  0502_visualization.qmd  graph.ipynb  graph.qmd  your_turn.ipynb  your_turn.qmd  your_turn05.ipynb  your_turn05.qmd
week06/: graph.ipynb  graph.qmd  probability.qmd  your_turn0523.ipynb  your_turn0523.qmd  your_turn06.ipynb  your_turn06.qmd
week07/: probability.ipynb  statistical_inference.ipynb  your_turn0523.qmd  (+2 more)
(+27 files in other folders)
