[tool.poetry]
name = "23-ds"
version = "0.1.0"
description = "徳島大学 教養教育院・創成科学科目群・イノベーション 「データサイエンスへの誘い」のためのPython環境"
authors = ["Shinya Uryu <uryu.shinya@tokushima-u.ac.jp>"]
readme = "README.md"
packages = [{include = "23_ds"}]

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^6.5.4"
jupyterlab = "^3.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
