[tool.poetry]
name = "23-ds"
version = "0.1.0"
description = "徳島大学 教養教育院・創成科学科目群・イノベーション 「データサイエンスへの誘い」のためのPython環境"
authors = ["Shinya Uryu <uryu.shinya@tokushima-u.ac.jp>"]
readme = "README.md"
packages = [{include = "23_ds"}]

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^6.5.4"
jupyterlab = "^3.6.3"
jupytext = "^1.14.5"
nbdev = "^2.3.12"
jupyterlab-quarto = "^0.1.45"
jupyterlab-code-formatter = "^1.6.1"
black = "^23.3.0"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
